--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -241,6 +241,15 @@
                     <ScrollViewer Margin="10,250,508,55">
                         <Grid Name="TargetEditorGrid"/>
                     </ScrollViewer>
+                    <Label Content="Proc Chance" HorizontalAlignment="Left" Margin="616,250,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.551,1.308"/>
+                    <ScrollViewer Margin="331,250,187,55">
+                        <Grid Name="ProcEditorGrid"/>
+                    </ScrollViewer>
+                    <Label Content="Click The Names NOT The Boxes" HorizontalAlignment="Left" Margin="105,219,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.551,1.308"/>
+                    <Label Content="Click The Names NOT The Boxes" HorizontalAlignment="Left" Margin="426,219,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.551,1.308"/>
+                    <TextBox Name="ProcChance" HorizontalAlignment="Left" Height="23" Margin="697,250,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"/>
+                    <TextBox Name="ProcCharges" HorizontalAlignment="Left" Height="23" Margin="697,281,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"/>
+                    <Label Content="Proc Charges" HorizontalAlignment="Left" Margin="612,281,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.551,1.308"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Icon Editor">
